Adopt active sampling (#141)
* Sampler should actively request columns when nothing found in the local custody
* A better logging for sampling
* Add shortened column indexes logging